Add allow-configuration parameter on appHeader directive

--- a/www/html/moduleview.html
+++ b/www/html/moduleview.html
@@ -1,5 +1,6 @@
 <ion-view class="gordon-blue-background" view-title="Module View">
-  <app-header back-button="true"></app-header>
+  <app-header back-button="true"
+    allow-configuration="false"></app-header>
   <ion-content class="module-view-content has-header"
     scroll="true"
     overflow-scroll="true">
