--- a/www/html/home.html
+++ b/www/html/home.html
@@ -1,5 +1,6 @@
 <ion-view class="gordon-blue-background" view-title="Home" cache-view="false">
-  <app-header back-button="false"></app-header>
+  <app-header back-button="false"
+    allow-configuration="true"></app-header>
   <ion-content class="home-content center text-center has-header"
     ng-class="{'has-footer': home.hasBanner, 'scroll-enabled': home.scrollEnabled}"
     scroll="true"
