Hide options menu item on pages without options

--- a/www/html/_menu.html
+++ b/www/html/_menu.html
@@ -8,6 +8,7 @@
         Stalk me at <a href="" onclick="window.open('http://www.adamvig.com/', '_system', 'location=yes'); return false;">AdamVig.com</a>
       </ion-item>
       <ion-item class="positive"
+        ng-show="allowConfiguration"
         ng-click="showConfigurationModal()">
         Options
       </ion-item>
