Move banner data refresh from HomeController to appBanner directive

--- a/www/html/_banner.html
+++ b/www/html/_banner.html
@@ -1,6 +1,6 @@
 <ion-modal-view class="banner-modal">
   <ion-header-bar>
-    <h1 class="title" ng-click="modal.toggleModal('banner')">Tap to close</h1>
+    <h1 class="title" ng-click="hideBannerModal()">Tap to close</h1>
   </ion-header-bar>
   <ion-content>
     <div class="banner-content" ng-bind-html="banner.body"></div>
