Cache downloaded data in home view
Re-enable view caching for home view so that automatically downloaded
data (loaded when the app is opened) will stay downloaded even when the
view changes and then changes back (for example when the user goes into
a module view).

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -1,4 +1,4 @@
-<ion-view class="gordon-blue-background" view-title="Home" cache-view="false">
+<ion-view class="gordon-blue-background" view-title="Home" cache-view="true">
   <app-header back-button="false"
     allow-configuration="true"></app-header>
   <ion-content class="home-content center text-center has-header"
