--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="js/services/StorageService.js"></script>
     <script src="lib/twemoji/twemoji.min.js"></script>
     <script src="lib/angular-twemoji/dist/angular-twemoji.js"></script>
+    <script src="lib/ios9webviewpatch.js"></script>
   </head>
   <body ng-app="gocostudent">
     <ion-nav-view></ion-nav-view>
