--- a/www/html/login.html
+++ b/www/html/login.html
@@ -21,7 +21,7 @@
       </p>
       <div class="list">
         <label class="item item-input"
-          ng-class="{ 'has-error' : loginForm.username.$invalid && loginForm.username.$dirty, 'valid': loginForm.username.$valid}">
+          ng-class="{ 'has-error' : loginForm.username.$invalid && loginForm.username.$dirty, 'valid': loginForm.username.$valid && loginForm.password.$touched}">
           <span class="input-label">Username</span>
           <input type="text"
             required
@@ -40,7 +40,7 @@
           <ng-message when="required">Username is required.</ng-message>
         </ng-messages>
         <label class="item item-input"
-          ng-class="{ 'has-error' : loginForm.password.$invalid && loginForm.password.$dirty, 'valid': loginForm.password.$valid}">
+          ng-class="{ 'has-error' : loginForm.password.$invalid && loginForm.password.$dirty, 'valid': loginForm.password.$valid && loginForm.password.$touched}">
           <span class="input-label">Password</span>
           <input type="password"
             required
