Switch selectedModules from $scope to controllerAs syntax

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -6,7 +6,7 @@
     scroll="true"
     overflow-scroll="true">
     <goco-module ng-class="home.moduleClass"
-      ng-repeat="module in selectedModules"
+      ng-repeat="module in home.selectedModules"
       module-type="module.moduleType"
       endpoint="module.endpoint"
       label="module.label"
