--- a/www/html/directives/_appheader.html
+++ b/www/html/directives/_appheader.html
@@ -1,4 +1,4 @@
-<ion-header-bar class="bar-light">
+<ion-header-bar class="bar-light" align-title="center">
   <div class="buttons" ng-show="backButton">
     <button class="button button-icon ion-arrow-left-c"
       ng-click="goHome()">
