Fix module icon and number showing up at same time
If the user tapped a module while the module info number was doing its
"zoom in" animation, both the info number and the icon would show up at
the same time. This was caused by the ng-hide on the info number waiting
until the info number animation finished to actually hide the element.
The module directive now has a timer that blocks interaction on the
module while the info number is animating.

--- a/www/html/directives/_gocomodule.html
+++ b/www/html/directives/_gocomodule.html
@@ -4,13 +4,19 @@
   <div class="module-content"
     ng-hide="module.errorMessage">
     <div class="module-left column">
-      <div class="{{module.icon}} icon"
-        ng-class="{loading: module.loading}"
-        ng-hide="module.loading === false"></div>
-      <h1 class="info-number"
-        ng-hide="!module.data || module.loading">
-        {{module.prefix}}{{module.data}}{{module.suffix}}
-      </h1>
+      <!-- Show icon when loading and before first interaction -->
+      <div class="module-icon-container"
+        ng-show="(module.loading === true || module.loading == null)">
+        <div class="{{module.icon}} icon"
+          ng-class="{loading: module.loading}"></div>
+      </div>
+      <!-- Hide info number when loading and before first interaction -->
+      <div class="module-info-container"
+        ng-hide="(module.loading === true || module.loading == null)">
+        <h1 class="info-number">
+          {{module.prefix}}{{module.data}}{{module.suffix}}
+        </h1>
+      </div>
     </div>
     <div class="module-right column">
       <h2 class="info-label">
@@ -21,6 +27,6 @@
     </div>
   </div>
   <h2 class="info-error-message"
-    ng-show="module.errorMessage  && !module.loading"
+    ng-show="module.errorMessage && !module.loading"
     ng-bind-html="module.errorMessage"></h2>
 </button>
