--- a/www/html/_configurationpopup.html
+++ b/www/html/_configurationpopup.html
@@ -1,3 +1,3 @@
 <center>
-  The configuration screen is for choosing which info appears on the main page.
+  Use this screen to choose what you want to see when you use GoCo Student!
 </center>
