Add options view

--- a/www/html/_menu.html
+++ b/www/html/_menu.html
@@ -9,7 +9,7 @@
       </ion-item>
       <ion-item class="positive"
         ng-show="allowConfiguration"
-        ng-click="showConfigurationModal()">
+        ng-click="go('options')">
         Options
       </ion-item>
       <ion-item class="assertive"
