Add settings factory and default settings constant

--- a/www/index.html
+++ b/www/index.html
@@ -20,11 +20,13 @@
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/controllers/ModuleViewController.js"></script>
+    <script src="js/controllers/OptionsController.js"></script>
     <script src="js/controllers/PrivacyPolicyController.js"></script>
     <script src="js/services/DataService.js"></script>
     <script src="js/services/ModuleFactory.js"></script>
     <script src="js/services/ModuleService.js"></script>
     <script src="js/services/PopupService.js"></script>
+    <script src="js/services/SettingsFactory.js"></script>
     <script src="js/services/StorageService.js"></script>
     <script src="lib/twemoji/twemoji.min.js"></script>
     <script src="lib/angular-twemoji/dist/angular-twemoji.js"></script>
