Add about section to options page

--- a/www/html/options.html
+++ b/www/html/options.html
@@ -3,5 +3,6 @@
     allow-configuration="false"></app-header>
   <ion-content class="options-content center text-center has-header">
     
+    <ng-include src="'html/_about.html'">
   </ion-content>
 </ion-view>
