Fix app header configuration variables

--- a/www/html/directives/_appheader.html
+++ b/www/html/directives/_appheader.html
@@ -6,7 +6,7 @@
     </button>
     <button class="button button-icon ion-navicon"
       ng-click="showConfigurationModal()"
-      ng-show="!backButton">
+      ng-show="allowConfiguration">
     </button>
   </div>
   <h1 class="title">GOCO STUDENT</h1>
