Add custom GoCo loader

--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
     <script src="js/filters.js"></script>
     <script src="js/directives/appBanner.js"></script>
     <script src="js/directives/appHeader.js"></script>
+    <script src="js/directives/gocoLoader.js"></script>
     <script src="js/directives/gocoModule.js"></script>
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/controllers/LoginController.js"></script>
