--- a/www/html/directives/_appheader.html
+++ b/www/html/directives/_appheader.html
@@ -1,12 +1,12 @@
 <ion-header-bar class="bar-light" align-title="center">
   <div class="buttons">
     <button class="button button-icon ion-arrow-left-c"
-      ng-show="backButton"
+      ng-if="backButton"
       ng-click="go('home')">
     </button>
     <button class="button button-icon ion-navicon"
       ng-click="showConfigurationModal()"
-      ng-show="allowConfiguration">
+      ng-if="allowConfiguration">
     </button>
   </div>
   <h1 class="title">GOCO STUDENT</h1>
