Add module background color to module view

--- a/www/html/moduleview.html
+++ b/www/html/moduleview.html
@@ -1,4 +1,4 @@
-<ion-view class="gordon-blue-background" view-title="Module View">
+<ion-view ng-class="moduleView.color" view-title="Module View">
   <app-header back-button="true"
     allow-configuration="false"></app-header>
   <ion-content class="module-view-content has-header"
