--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="js/directives/gocoLoader.js"></script>
     <script src="js/directives/gocoModule.js"></script>
     <script src="js/controllers/HomeController.js"></script>
+    <script src="js/controllers/HighlandExpressController.js"></script>
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/controllers/ModuleViewController.js"></script>
     <script src="js/controllers/OptionsController.js"></script>
