Disable overflow scroll to fix Highland Express scroll issues

--- a/www/html/moduleview.html
+++ b/www/html/moduleview.html
@@ -3,7 +3,7 @@
     allow-configuration="false"></app-header>
   <ion-content class="module-view-content has-header"
     scroll="true"
-    overflow-scroll="true">
+    overflow-scroll="false">
     <h3 class="error text-center vertical-center"
       ng-bind="moduleView.errorMessage"
       ng-if="moduleView.errorMessage"></h3>
