--- a/www/html/moduleviews/_chapelevents.html
+++ b/www/html/moduleviews/_chapelevents.html
@@ -1,10 +1,5 @@
 <div class="chapel-events">
-  <div class="chapel-events-header">
-    <h3 class="chapel-events-title">
-      <div class="bible-icon icon-inline icon"></div>
-      CL&amp;W Events
-    </h3>
-  </div>
+  <module-view-header icon="moduleView.icon" label="moduleView.label"></module-view-header>
   <ion-list class="chapel-events-list">
     <ion-item ng-repeat="event in moduleView.data">
       <div class="event-title">{{event.title}}</div>
