--- a/www/html/moduleviews/_highlandexpress.html
+++ b/www/html/moduleviews/_highlandexpress.html
@@ -1,9 +1,9 @@
 <div class="highland-express" ng-controller="HighlandExpressController as highland">
   <module-view-header icon="moduleView.icon" label="moduleView.label"></module-view-header>
-  <div class="highland-banner"
-    ng-show="moduleView.data.banner.active">
-    <h3>{{moduleView.data.banner.title}}</h3>
-    <p>{{moduleView.data.banner.body}}</p>
+  <div class="highland-announcement"
+    ng-show="moduleView.data.announcement.active">
+    <h3>{{moduleView.data.announcement.title}}</h3>
+    <p>{{moduleView.data.announcement.body}}</p>
   </div>
   <div class="highland-controls">
     <span class="ion-arrow-left-a icon"
