--- a/www/html/moduleviews/_athleticsschedule.html
+++ b/www/html/moduleviews/_athleticsschedule.html
@@ -6,6 +6,10 @@
       <img class="event-image" alt=""
         ng-src="{{event.opponentLogoURL || 'img/fightingscotsavatar.svg'}}">
       <div class="event-title">{{event.title}}</div>
+      <div class="event-details">
+        <div>{{event.location}}</div>
+        <div>{{event.time}}</div>
+      </div>
     </ion-item>
   </ion-list>
 </div>
