Add relative date to event details

--- a/www/html/moduleviews/_athleticsschedule.html
+++ b/www/html/moduleviews/_athleticsschedule.html
@@ -8,7 +8,7 @@
       <div class="event-title">{{event.title}}</div>
       <div class="event-details">
         <div>{{event.location}}</div>
-        <div>{{event.time}}</div>
+        <div>{{event.relative}} &middot; {{event.datetime}}</div>
       </div>
     </ion-item>
   </ion-list>
