Change app header bar color from white to light gray

--- a/www/html/directives/_appheader.html
+++ b/www/html/directives/_appheader.html
@@ -1,4 +1,4 @@
-<ion-header-bar class="bar-light" align-title="center">
+<ion-header-bar class="light-gray" align-title="center">
   <div class="buttons">
     <button class="button button-icon ion-arrow-left-c"
       ng-if="backButton"
