Add home navigation directive

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -21,4 +21,5 @@
       module-control="moduleControl"></goco-module>
   </ion-content>
   <app-banner></app-banner>
+  <home-nav></home-nav>
 </ion-view>
