--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
     <script src="js/directives/appHeader.js"></script>
     <script src="js/directives/gocoLoader.js"></script>
     <script src="js/directives/gocoModule.js"></script>
+    <script src="js/directives/homeNav.js"></script>
     <script src="js/directives/moduleViewHeader.js"></script>
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/controllers/HighlandExpressController.js"></script>
