Add DbFactory to provide database access

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="js/controllers/OptionsController.js"></script>
     <script src="js/controllers/PrivacyPolicyController.js"></script>
     <script src="js/services/DataService.js"></script>
+    <script src="js/services/DbFactory.js"></script>
     <script src="js/services/ModuleFactory.js"></script>
     <script src="js/services/PopupService.js"></script>
     <script src="js/services/SettingsFactory.js"></script>
