--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-messages.min.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
     <script src="js/app.js"></script>
     <script src="js/constants.js"></script>
