Add function to get all settings at once

--- a/www/html/options.html
+++ b/www/html/options.html
@@ -4,8 +4,8 @@
   <ion-content class="options-content text-center has-header">
     <ion-list>
       <ion-item>
-        <ion-toggle ng-model="options.loadOnLaunch"
-          ng-change="options.settings.toggle('loadOnLaunch')"
+        <ion-toggle ng-model="options.settings.loadOnLaunch"
+          ng-change="options.toggle('loadOnLaunch')"
           toggle-class="toggle-balanced">
           Load all data on launch
         </ion-toggle>
