Add app version to options view

--- a/www/html/options.html
+++ b/www/html/options.html
@@ -10,6 +10,10 @@
           Load all data on launch
         </ion-toggle>
       </ion-item>
+      <ion-item>
+        <span class="item-label">App Version</span>
+        <span class="item-data" ng-bind="options.settings.appVersion"></span>
+      </ion-item>
     </ion-list>
     <ng-include src="'html/_about.html'">
   </ion-content>
