Add configuration modal controller

--- a/www/html/_configuration.html
+++ b/www/html/_configuration.html
@@ -1,4 +1,4 @@
-<ion-modal-view class="configuration-modal">
+<ion-modal-view class="configuration-modal" ng-controller="ConfigController">
   <ion-header-bar>
     <h1 class="title" ng-click="hideConfigurationModal()">Tap to close</h1>
   </ion-header-bar>
