--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <script src="js/constants.js"></script>
     <script src="js/filters.js"></script>
 
+    <script src="js/controllers/ConfigController.js"></script>
     <script src="js/controllers/HighlandExpressController.js"></script>
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/controllers/LoginController.js"></script>
