Change homeNav to save state to $rootScope

--- a/www/html/directives/_homenav.html
+++ b/www/html/directives/_homenav.html
@@ -1,11 +1,11 @@
 <ion-footer-bar class="bar-neutral home-nav">
   <div class="home-nav-button"
-    ng-class="{selected: homeNav.isShown('info')}"
+    ng-class="{selected: moduleTypeShown == 'info'}"
     ng-click="homeNav.switch('info')">
     Me
   </div>
   <div class="home-nav-button"
-    ng-class="{selected: homeNav.isShown('interaction')}"
+    ng-class="{selected: moduleTypeShown == 'interaction'}"
     ng-click="homeNav.switch('interaction')">
     Gordon
   </div>
