--- a/www/html/_configuration.html
+++ b/www/html/_configuration.html
@@ -7,7 +7,7 @@
       <ion-item class="item-checkbox"
         ng-repeat="module in config.allModules"
         ng-if="module.moduleType == config.moduleTypeShown"
-        ng-class="{'{{module.moduleClass}}': true, 'item-placeholder': !config.isSelected(module)}">
+        ng-class="{'{{module.moduleClass}}': true, 'item-not-selected': !config.isSelected(module)}">
         <label class="ion-checkmark goco-checkbox"
           ng-class="{'ion-checkmark': config.isSelected(module), 'ion-close': !config.isSelected(module), 'disabled': config.isOnlyModule(module)}">
           <input type="checkbox"
