Move banner to top of screen (fixes #70)

--- a/www/html/directives/_appbanner.html
+++ b/www/html/directives/_appbanner.html
@@ -1,6 +1,6 @@
-<ion-footer-bar class="bar-balanced"
+<div class="app-banner bar bar-subheader bar-balanced"
   align-title="center"
   ng-if="banner.body"
   ng-click="showBannerModal()">
   <h1 class="title">{{banner.title}}</h1>
-</ion-footer-bar>
+</div>
