--- a/www/html/_configuration.html
+++ b/www/html/_configuration.html
@@ -4,18 +4,20 @@
   </ion-header-bar>
   <ion-content>
     <ion-list>
-      <!-- Note: this is the only way to apply moduleClass as well as a
-          conditionally applied class in the same statement. -->
+      <!-- 1. This is the only way to apply moduleClass as well as a
+          conditionally applied class in the same statement.
+          2. moduleTypeShown cannot be read from $scope because the modal has
+          an isolated $scope. -->
       <ion-item class="item-checkbox"
         ng-repeat="module in config.allModules"
-        ng-if="module.moduleType == config.moduleTypeShown"
-        ng-class="{'{{module.moduleClass}}': true, 'item-not-selected': !config.isSelected(module)}">
+        ng-class="{'{{module.moduleClass}}': true, 'item-not-selected': !config.isSelected(module.endpoint)}"
+        ng-show="module.moduleType == config.moduleTypeShown">
         <label class="goco-checkbox"
-          ng-class="{'ion-checkmark': config.isSelected(module), 'ion-close': !config.isSelected(module), 'disabled': config.isOnlyModule(module)}">
+          ng-class="{'ion-checkmark': config.isSelected(module.endpoint), 'ion-close': !config.isSelected(module.endpoint), 'disabled': config.isOnlyModule(module.endpoint)}">
           <input type="checkbox"
             ng-model="config.checkboxes[module.endpoint]"
             ng-change="config.updateModules(module.endpoint)"
-            ng-disabled="config.isOnlyModule(module)">
+            ng-disabled="config.isOnlyModule(module.endpoint)">
         </label>
         <p class="item-title">{{ module.label }}</p>
       </ion-item>
