Fix Highland Express schedule scrolling
The schedule added several destinations but was still constrained to
the width of the screen, so the new destinations were cut off. This
commit adds support for horizontal scrolling in the schedule view. The
<ion-scroll> directive did not work as a drop-in like it should have,
hence the getDimensions() function and the inline styles in the view.
This solution automatically sizes the schedule <ion-scroll> based on
the number of rows and columns in the schedule.

--- a/www/html/moduleviews/_highlandexpress.html
+++ b/www/html/moduleviews/_highlandexpress.html
@@ -14,16 +14,18 @@
     <button type="button" class="schedule-button ion-arrow-right-a icon-small"
       ng-click="highland.nextSchedule()"></button>
   </div>
-  <div class="highland-schedule">
-    <div class="highland-destinations row">
-    	<div class="col"
-        ng-repeat="destination in moduleView.data.schedule[highland.day].destinations track by $index">
-        {{destination}}
-    	</div>
+  <ion-scroll class="highland-schedule" direction="xy">
+    <div class="highland-schedule-inner" style="height: {{highland.height}}px; width: {{highland.width}}px;">
+      <div class="highland-destinations row">
+      	<div class="col"
+          ng-repeat="destination in moduleView.data.schedule[highland.day].destinations track by $index">
+          {{destination}}
+      	</div>
+      </div>
+      <div class="row"
+        ng-repeat="row in moduleView.data.schedule[highland.day].times">
+        <div class="col" ng-repeat="column in row track by $index">{{column}}</div>
+      </div>
     </div>
-    <div class="row"
-      ng-repeat="row in moduleView.data.schedule[highland.day].times">
-      <div class="col" ng-repeat="column in row track by $index">{{column}}</div>
-    </div>
-  </div>
+  </ion-scroll>
 </div>
