--- a/www/html/privacypolicy.html
+++ b/www/html/privacypolicy.html
@@ -1,5 +1,5 @@
 <ion-view class="gordon-blue-background" view-title="Post Login" cache-view="false">
-  <ion-content class="privacy-policy-content center text-center">
+  <ion-content class="privacy-policy-content center text-center vertical-center">
     <h2>Privacy Policy</h2>
     <p class="privacy-policy-text">
       Your password and student ID number are <em>never</em> stored
