--- a/www/html/home.html
+++ b/www/html/home.html
@@ -12,6 +12,7 @@
       ng-repeat="module in home.selectedModules"
       ng-show="module.moduleType == moduleTypeShown"
       module-type="module.moduleType"
+      http-method="module.httpMethod"
       endpoint="module.endpoint"
       label="module.label"
       icon="module.icon"
