Change personal site URL to HTTPS

--- a/www/html/_menu.html
+++ b/www/html/_menu.html
@@ -5,7 +5,7 @@
         Yell at me <a href="" onclick="window.open('https://twitter.com/MeetAdamJohn', '_system', 'location=yes'); return false;">@MeetAdamJohn</a>
       </ion-item>
       <ion-item>
-        Stalk me at <a href="" onclick="window.open('http://www.adamvig.com/', '_system', 'location=yes'); return false;">AdamVig.com</a>
+        Stalk me at <a href="" onclick="window.open('https://www.adamvig.com/', '_system', 'location=yes'); return false;">AdamVig.com</a>
       </ion-item>
       <ion-item class="positive"
         ng-show="allowConfiguration"
